training without any pre loaded weights

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ __pycache__/
 backup
 sample_images/*.jpg
 data/
+001/
 *result.jpg
 *.avi
 *.model
@@ -10,3 +11,4 @@ data/
 items/*
 backgrounds/*
 assets/
+backgrounds_futsu/*
